suppression ligne inutile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="UTF-8" />
@@ -9,9 +9,6 @@
   <title>
     Ylann Wattrelos | Etudiant en BUT Informatique.
   </title>
-
-  <meta name="description" content="Add small description of yourslef.">
-  <meta name="keywords" content="Put your name, skills and some coding keywords" />
   <link rel="stylesheet" href="index.css" />
 </head>
 
@@ -51,7 +48,7 @@
         <div class="projet__boxes">
 
           <!-- ***** PortFolio ***** -->
-           
+
           <div class="projet__box">
             <div class="projet__text">
               <h3>Portfolio</h3>
