reglage petit bug

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="#projet" class="nav__lien">Projets</a></li>
+          <li class="nav__item"><a href="#projet" class="nav__lien">Mes projets</a></li>
           <li class="nav__item">
             <a href="#apropos" class="nav__lien">A propos</a>
           </li>
           <li class="nav__item">
-            <a href="#contact" class="nav__lien">Contact</a>
+            <a href="#contact" class="nav__lien">Me contacter</a>
           </li>
         </ul>
       </nav>
@@ -62,7 +62,7 @@
               </ul>
 
               <div class="projet__liens">
-                <a href="#top" target="_blank" class="lien__text">
+                <a href="#top" class="lien__text">
                   Voir le site <span>&rarr;</span>
                 </a>
                 <a href="https://github.com/ylannwattrelos/PortFolio" title="View Source Code" target="_blank">
@@ -98,7 +98,7 @@
               </p>
 
               <p class="paragraphe-defis">
-                  Je suis constamment à la recherche de **nouveaux défis** et de projets qui me poussent hors de ma zone de confort. 
+                  Je suis constamment à la recherche de nouveaux défis et de projets qui me poussent hors de ma zone de confort. 
                   J'aime le travail d'équipe et ce que je peux apprendre des autres. Pour moi, l'apprentissage est un processus continu, 
                   essentiel dans le domaine de l'informatique qui est en constante évolution. Naturellement, je m'efforce de produire du 
                   code propre, documenté et maintenable.
