correction faute orthographe

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <p class="paragraphe-defis">
                   Je suis constamment à la recherche de nouveaux défis et de projets qui me poussent hors de ma zone de confort. 
                   J'aime le travail d'équipe et ce que je peux apprendre des autres. Pour moi, l'apprentissage est un processus continu, 
-                  essentiel dans le domaine de l'informatique qui est en constante évolution. Naturellement, je m'efforce de produire du 
+                  essentiel dans le domaine de l'informatique qui est en constant évolution. Naturellement, je m'efforce de produire du 
                   code propre, documenté et maintenable.
               </p>
 
