--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2>Mes Projets</h2>
         <div class="projet__boxes">
 
-          <div class="carousel-viewport">
+          <div class="carousel-projet">
             <div class="projet__boxes auto-scroll">
 
               <!-- ***** PortFolio ***** -->
@@ -302,8 +302,7 @@
               <span class="close-button">&times;</span>
               <h3>Check.exe : Échecs en Terminal</h3>
               <p>
-                <b>Check.exe</b> est un jeu d'échecs entièrement développé en Java, conçu pour s'exécuter dans un terminal. Ce projet met l'accent sur la logique algorithmique pure et la gestion des règles complexes du jeu d'échecs sans interface graphique lourde.
-              </p>
+                <b>Check.exe</b> est un jeu d'échecs entièrement développé en Java, conçu pour s'exécuter dans un terminal. Ce projet nous a surtout permis de découvrir et d'appliquer la méthodologie Agile.
               <p>
                 <b>Technologies utilisées :</b>
                 <ul>
@@ -324,6 +323,42 @@
         </div>
       </div>
     </section>
+
+    <!-- ***** Competences ***** -->
+
+    <section class="competences" id="competences">
+      <div class="row">
+        <h2>Compétences</h2>
+        <div class="carousel-competences">
+          <div class="competences__box auto-scroll">
+            <img src="./images/html.svg" class="competences__image" alt="html" />
+            <img src="./images/css.svg" class="competences__image" alt="css" />
+            <img src="./images/Java.svg" class="competences__image" alt="Java" />
+            <img src="./images/Javascript.svg" class="competences__image" alt="Javascript" />
+            <img src="./images/Python.svg" class="competences__image" alt="Python" />
+            <img src="./images/SQL.svg" class="competences__image" alt="SQL" />
+            <img src="./images/git.svg" class="competences__image" alt="git" />
+            <img src="./images/vscode.svg" class="competences__image" alt="vscode" />
+            <img src="./images/intellij-idea.svg" class="competences__image" alt="intellij-idea" />
+            <img src="./images/Docker.svg" class="competences__image" alt="Docker" />
+          </div>
+
+          <div aria-hidden="true" class="competences__box auto-scroll">
+            <img src="./images/html.svg" class="competences__image" alt="html" />
+            <img src="./images/css.svg" class="competences__image" alt="css" />
+            <img src="./images/Java.svg" class="competences__image" alt="Java" />
+            <img src="./images/Javascript.svg" class="competences__image" alt="Javascript" />
+            <img src="./images/Python.svg" class="competences__image" alt="Python" />
+            <img src="./images/SQL.svg" class="competences__image" alt="SQL" />
+            <img src="./images/git.svg" class="competences__image" alt="git" />
+            <img src="./images/vscode.svg" class="competences__image" alt="vscode" />
+            <img src="./images/intellij-idea.svg" class="competences__image" alt="intellij-idea" />
+            <img src="./images/Docker.svg" class="competences__image" alt="Docker" />
+          </div>
+        </div>
+      </div>
+    </section>
+
     
   </main>
 
