--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <span>Ylann Wattrelos</span>
         </h1>
         <p>Développeur basé à Lille, France</p>
-        <a href="#contact" class="btn btn--pink">Me contacter</a>
+        <a href="./fichier/CV.pdf" download="CVWattrelosYlann" class="btn btn--pink">Télécharger mon CV </a>
       </div>
     </div>
   </header>
