--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <img src="./images/Javascript.svg" class="competences__image" alt="Javascript" />
             <img src="./images/Python.svg" class="competences__image" alt="Python" />
             <img src="./images/SQL.svg" class="competences__image" alt="SQL" />
-            <img src="./images/git.svg" class="competences__image" alt="git" />
+            <img src="./images/Git.svg" class="competences__image" alt="git" />
             <img src="./images/vscode.svg" class="competences__image" alt="vscode" />
             <img src="./images/intellij-idea.svg" class="competences__image" alt="intellij-idea" />
             <img src="./images/Docker.svg" class="competences__image" alt="Docker" />
@@ -353,7 +353,7 @@
             <img src="./images/Javascript.svg" class="competences__image" alt="Javascript" />
             <img src="./images/Python.svg" class="competences__image" alt="Python" />
             <img src="./images/SQL.svg" class="competences__image" alt="SQL" />
-            <img src="./images/git.svg" class="competences__image" alt="git" />
+            <img src="./images/Git.svg" class="competences__image" alt="git" />
             <img src="./images/vscode.svg" class="competences__image" alt="vscode" />
             <img src="./images/intellij-idea.svg" class="competences__image" alt="intellij-idea" />
             <img src="./images/Docker.svg" class="competences__image" alt="Docker" />
